Update hyperref options.

--- a/macros.tex
+++ b/macros.tex
@@ -14,7 +14,7 @@
 \usepackage{enumitem}
 
 %%% Reference, Citation and Link
-\usepackage{hyperref}
+\usepackage[linkcolor=black,citecolor=black,anchorcolor=black,filecolor=black,menucolor=black,runcolor=black,urlcolor=black,hidelinks]{hyperref}
 %\usepackage{url}
 \usepackage{breakurl}
 %\usepackage{cite}
