Fix hyperref clash options.

--- a/macros.tex
+++ b/macros.tex
@@ -14,7 +14,8 @@
 \usepackage{enumitem}
 
 %%% Reference, Citation and Link
-\usepackage[linkcolor=black,citecolor=black,anchorcolor=black,filecolor=black,menucolor=black,runcolor=black,urlcolor=black,hidelinks]{hyperref}
+\usepackage{hyperref}
+\hypersetup{linkcolor=black,citecolor=black,anchorcolor=black,filecolor=black,menucolor=black,runcolor=black,urlcolor=black,hidelinks}
 %\usepackage{url}
 \usepackage{breakurl}
 %\usepackage{cite}
