--- a/main.tex
+++ b/main.tex
@@ -79,12 +79,12 @@
 \affiliation{
 %  \position{Position1}
 %  \department{Department1}              %% \department is recommended
-%  \institution{The University of Texas at Austin}            %% \institution is required
+  \institution{The University of Texas at Austin}            %% \institution is required
 %  \streetaddress{Street1 Address1}
 %  \city{City1}
 %  \state{State1}
 %  \postcode{Post-Code1}
-%  \country{Country1}                    %% \country is recommended
+  \country{USA}                    %% \country is recommended
 }
 \email{pynie@utexas.edu}          %% \email is recommended
 
