Move defs* to defs/ directory; Fix some problem in package-source.sh.

--- a/macros.tex
+++ b/macros.tex
@@ -82,8 +82,8 @@
 % for including revision info in the document
 \newcommand{\RevisionInfo}{\Fix{Time: \today{} at \currenttime{.}}}
 
-\input{defs-logic} % for logic symbols
-\input{defs-code} % for code listings
+\input{defs/defs-logic} % for logic symbols
+\input{defs/defs-code} % for code listings
 
 
 %%%----------
