adding a ieee-paper template

--- a/ieee-paper/macros.tex
+++ b/ieee-paper/macros.tex
@@ -1,6 +1,6 @@
 %%% macros.tex
 %%% Import packages, define utility commands and define macros
-%%% Version 1.2.0-acm on 2024-01-08
+%%% Version 1.2.0-ieee on 2024-01-08
 
 %%%----------
 %%% Imports
@@ -11,14 +11,17 @@
 \usepackage{graphicx}
 \usepackage[normalem]{ulem} % normalem do not replace \emph to underline
 \usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsfonts}
 \usepackage{enumitem}
+\usepackage{textcomp}
 
 %%% Reference, Citation and Link
 \usepackage{hyperref}
 \hypersetup{linkcolor=black,citecolor=black,anchorcolor=black,filecolor=black,menucolor=black,runcolor=black,urlcolor=black,hidelinks}
 %\usepackage{url}
 \usepackage{breakurl}
-%\usepackage{cite}
+\usepackage{cite}
 
 %%% Tables
 \usepackage{booktabs}
