--- a/standalone/main.tex
+++ b/standalone/main.tex
@@ -58,13 +58,13 @@
 \begin{document}
 %% \maketitle
 
-%% \begin{center}
-%% \begin{tabular}{|p{6em}|p{16em}|p{8em}|}
-%% \hline
-%% A & B & C \\
-%% \hline
-%% \end{tabular}
-%% \end{center}
+\begin{center}
+\begin{tabular}{|p{6em}|p{16em}|p{8em}|}
+\hline
+A & B & C \\
+\hline
+\end{tabular}
+\end{center}
 
 %% \includepdf[pages=-,pagecommand={}]{XXX}
 
