--- a/ieee-paper/main.tex
+++ b/ieee-paper/main.tex
@@ -18,7 +18,7 @@
 \maketitle
 
 %% Abstract
-%% \input{abstract}
+\input{abstract}
 
 %% Keywords
 %% \begin{IEEEkeywords}
@@ -27,8 +27,7 @@
 
 
 %% Contents
-%\input{XXX}
-Remove this once you add a real citation~\cite{DumbBib}.
+\input{intro}
 
 
 %% Acknowledgments
