--- a/acl-paper/macros.tex
+++ b/acl-paper/macros.tex
@@ -1,9 +1,18 @@
 %%% macros.tex
 %%% Import packages, define utility commands and define macros
-%%% Version 1.3.0-acm on 2025-07-25
+%%% Version 1.3.0-arr on 2025-07-21
 
 %%%----------
 %%% Imports
+
+%%% Template specific - ARR
+\usepackage{times}
+\usepackage{latexsym}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage{microtype}
+\usepackage{inconsolata}
+\usepackage{natbib}
 
 %%% Text Formatting
 \usepackage{xspace}
