fix IEEE doesn't have \citep

--- a/ieee-paper/intro.tex
+++ b/ieee-paper/intro.tex
@@ -1,4 +1,4 @@
 \section{Introduction}
 \label{sec:intro}
 
-Remove this once you add a real citation~\citep{AliceETAL42DumbBib}.
+Remove this once you add a real citation~\cite{AliceETAL42DumbBib}.
