refactor text into separate directory

--- a/acl-paper/main.tex
+++ b/acl-paper/main.tex
@@ -92,13 +92,13 @@ Pengyu Nie \\
 \maketitle
 
 %% Abstract
-\input{abstract}
+\input{text/abstract}
 
 %% Change the authors list of running head, if it is too long to fit
 %% \renewcommand{\shortauthors}{Nie et al.}
 
 %% Contents
-\input{intro}
+\input{text/intro}
 
 
 %% Acknowledgments
