--- a/ieee-paper/main.tex
+++ b/ieee-paper/main.tex
@@ -18,7 +18,7 @@
 \maketitle
 
 %% Abstract
-\input{abstract}
+\input{text/abstract}
 
 %% Keywords
 %% \begin{IEEEkeywords}
@@ -27,7 +27,7 @@
 
 
 %% Contents
-\input{intro}
+\input{text/intro}
 
 
 %% Acknowledgments
