--- a/acl-paper/macros.tex
+++ b/acl-paper/macros.tex
@@ -1,11 +1,11 @@
 %%% macros.tex
 %%% Import packages, define utility commands and define macros
-%%% Version 1.3.0-arr on 2025-07-21
+%%% Version 1.3.1-acl on 2025-10-09
 
 %%%----------
 %%% Imports
 
-%%% Template specific - ARR
+%%% Template specific - ACL
 \usepackage{times}
 \usepackage{latexsym}
 \usepackage[T1]{fontenc}
@@ -13,6 +13,7 @@
 \usepackage{microtype}
 \usepackage{inconsolata}
 \usepackage{natbib}
+\usepackage{amssymb}
 
 %%% Text Formatting
 \usepackage{xspace}
@@ -123,10 +124,10 @@
 %%% Tables
 
 % Captions
-%\DefMacro{\TC-xxx}{Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit.\label{fig:table:xxx}}
+%\DefMacro{TC-xxx}{Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit.\label{fig:table:xxx}}
 
 % Headers
-%\DefMacro{\TH-xxx}{Yyy\xspace}
+%\DefMacro{TH-xxx}{Yyy\xspace}
 
 
 %%% Numbers
