--- a/ieee-paper/macros.tex
+++ b/ieee-paper/macros.tex
@@ -1,6 +1,6 @@
 %%% macros.tex
 %%% Import packages, define utility commands and define macros
-%%% Version 1.3.0-ieee on 2025-07-25
+%%% Version 1.3.1-ieee on 2025-10-09
 
 %%%----------
 %%% Imports
@@ -120,10 +120,10 @@
 %%% Tables
 
 % Captions
-%\DefMacro{\TC-xxx}{Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit.\label{fig:table:xxx}}
+%\DefMacro{TC-xxx}{Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit.\label{fig:table:xxx}}
 
 % Headers
-%\DefMacro{\TH-xxx}{Yyy\xspace}
+%\DefMacro{TH-xxx}{Yyy\xspace}
 
 
 %%% Numbers
