--- a/acl-paper/bib.bib
+++ b/acl-paper/bib.bib
@@ -54,9 +54,12 @@
 @String{TSE = "Transactions on Software Engineering"}
 @String{VLDB = "Proceedings of the VLDB Endowment"}
 
-@inproceedings{AliceETAL42DumbBib,
-  author={Alice, Bob and others},
-  title={This Document Needs at Least One Bib Entry to Compile},
-  booktitle=ICSE,
-  year={1942},
+@inproceedings{VaswaniETAL17Attention,
+  author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+  booktitle = NeurIPS,
+  pages = {},
+  title = {Attention is All you Need},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+  volume = {30},
+  year = {2017}
 }
