--- a/acl-paper/text/intro.tex
+++ b/acl-paper/text/intro.tex
@@ -1,4 +1,14 @@
 \section{Introduction}
 \label{sec:intro}
 
-Remove this once you add a real citation~\citep{AliceETAL42DumbBib}.
+\Fix{REMOVE THIS: Sometimes, a citation~\cite{VaswaniETAL17Attention} is all you need to make an empty latex project compilable.}
+
+\vspace{3pt}
+\noindent
+The main contributions of this work include:
+
+\begin{itemize}[topsep=3pt,itemsep=1ex,partopsep=0ex,parsep=0ex,leftmargin=*]
+\item \MyPara{Idea}
+\item \MyPara{Technique}
+\item \MyPara{Evaluation}
+\end{itemize}
