--- a/acm-paper/text/intro.tex
+++ b/acm-paper/text/intro.tex
@@ -1,2 +1,12 @@
 \section{Introduction}
 \label{sec:intro}
+
+\vspace{3pt}
+\noindent
+The main contributions of this work include:
+
+\begin{itemize}[topsep=3pt,itemsep=1ex,partopsep=0ex,parsep=0ex,leftmargin=*]
+\item \MyPara{Idea}
+\item \MyPara{Technique}
+\item \MyPara{Evaluation}
+\end{itemize}
